--- a/src/app/Core/Components/table/table.component.scss
+++ b/src/app/Core/Components/table/table.component.scss
@@ -1,7 +1,13 @@
 @import "./../../scss/theme";
 
+.table-wrapper {
+  margin-bottom: 40px;
+  @include xl-min {
+    margin-bottom: 60px;
+  }
+}
+
 table {
-  table-layout: fixed;
   text-align: center;
 }
 
@@ -13,19 +19,30 @@ td {
 }
 
 th {
-  color: $heading-color;
+  color: $primary-text-color;
   font-weight: 500;
 }
 
 .table-content {
   box-shadow: 0 2px 20px rgb(49 54 68 / 9%);
   border-radius: 4px;
-  background-color: $table-bg-color;
+  background-color: $cards-bg-color;
   padding: 20px;
 }
 
 .table-heading {
   padding: 0 0 20px 20px;
-  color: $heading-color;
+  color: $primary-text-color;
   font-weight: 400;
+}
+
+.row-click-behavior {
+  cursor: pointer;
+  transition: 0.15s;
+  &:hover {
+    background-color: $inverted-bg-color;
+    td {
+      color: $background-color !important;
+    }
+  }
 }
