Add support for skeleton loader

--- a/src/app/Core/scss/_theme.scss
+++ b/src/app/Core/scss/_theme.scss
@@ -1,3 +1,4 @@
 @import "./mixins/media-query.mixin";
 @import "./variables/colors";
 @import "./variables/layout";
+@import "./styles/global-styles";
