--- a/src/app/Core/Components/table/table.component.html
+++ b/src/app/Core/Components/table/table.component.html
@@ -1,6 +1,7 @@
 <div class="table-wrapper">
   <h3 class="table-heading">{{ tableDataConfig.tableHeading }}</h3>
-  <div class="table-content table-responsive">
+  <div class="table-loader" *ngIf="isLoading"><div class="skeleton-loader"></div></div>
+  <div *ngIf="!isLoading" class="table-content table-responsive">
     <table class="table table-hover table-borderless align-middle">
       <thead>
         <tr>
