Add page header

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-page-header pageHeading="Dashboard"></app-page-header>
 <div class="btn-wrapper">
   <app-button
     [btnId]="buttonIds.addPatient"
