--- a/src/app/Core/scss/_theme.scss
+++ b/src/app/Core/scss/_theme.scss
@@ -1,4 +1,4 @@
 @import "./mixins/media-query.mixin";
+@import "./mixins/common.mixin";
 @import "./variables/colors";
 @import "./variables/layout";
-@import "./styles/global-styles";
