Updates in medical records comp

--- a/src/app/Core/Components/medical-record/medical-record.component.scss
+++ b/src/app/Core/Components/medical-record/medical-record.component.scss
@@ -11,3 +11,18 @@ p {
   line-height: 1.5;
   margin-bottom: 2px;
 }
+
+.medical-card {
+  border: 1px solid $primary-text-color;
+  border-radius: 4px;
+  padding: 20px;
+  h6 {
+    border-bottom: 4px solid $primary-text-color;
+    border-radius: 2px;
+    display: inline-block;
+    margin-bottom: 0.75rem;
+  }
+  p {
+    padding-left: 10px;
+  }
+}
