--- a/src/app/Core/Components/medical-record/medical-record.component.html
+++ b/src/app/Core/Components/medical-record/medical-record.component.html
@@ -2,15 +2,15 @@
   <mat-expansion-panel-header>
     <mat-panel-title> Category: {{ category }} </mat-panel-title>
     <mat-panel-description>
-      Last Visit: {{ recordConfig.dateOfVisit }}
+      Last Visit: {{ recordConfig.stringifiedVisitDate }}
     </mat-panel-description>
   </mat-expansion-panel-header>
   <h6>
-    Next Follow-Up: <span>{{ recordConfig.followUpDate }}</span>
+    Next Follow-Up: <span>{{ recordConfig.stringifiedFollowUpDate }}</span>
   </h6>
   <hr />
-  <div class="row">
-    <div class="col-lg-6 col-xl-4">
+  <div class="row g-2">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Physical Examination</h6>
       <p>
         Blood Pressure:
@@ -27,23 +27,23 @@
         Weight: <span>{{ recordConfig.physicalExamination.weight }}</span>
       </p>
     </div>
-    <div class="col-lg-6 col-xl-4">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Symptoms</h6>
       <p>{{ recordConfig.symptoms }}</p>
     </div>
-    <div class="col-lg-6 col-xl-4">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Investigation</h6>
       <p>{{ recordConfig.investigation }}</p>
     </div>
-    <div class="col-lg-6 col-xl-4">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Diagnosis</h6>
       <p>{{ recordConfig.diagnosis }}</p>
     </div>
-    <div class="col-lg-6 col-xl-4">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Treatment</h6>
       <p>{{ recordConfig.treatment }}</p>
     </div>
-    <div class="col-lg-6 col-xl-4">
+    <div class="col-lg-6 col-xl-4 medical-card">
       <h6>Notes</h6>
       <p>{{ recordConfig.notes }}</p>
     </div>
