extract payment history in a wrapper component

--- a/src/app/Core/Components/payment-record/payment-record.component.html
+++ b/src/app/Core/Components/payment-record/payment-record.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel-header>
     <mat-panel-title> Category: {{ category }} </mat-panel-title>
     <mat-panel-description>
-      Pending Amount: {{ paymentConfig.dueAmount }}
+      Pending Amount: ₹{{ paymentConfig.dueAmount }}
     </mat-panel-description>
   </mat-expansion-panel-header>
   <hr />
@@ -13,10 +13,10 @@
     >
       <h6>{{ transaction.stringifiedDate }}</h6>
       <p *ngIf="transaction.fees > 0">
-        Fees: <span>{{ transaction.fees }}</span>
+        Fees: <span>₹{{ transaction.fees }}</span>
       </p>
       <p>
-        Paid Amount: <span>{{ transaction.paidAmount }}</span>
+        Paid Amount: <span>₹{{ transaction.paidAmount }}</span>
       </p>
     </div>
   </div>
