--- a/src/app/patient/view-patient/view-patient.component.html
+++ b/src/app/patient/view-patient/view-patient.component.html
@@ -51,31 +51,7 @@
 </div>
 
 <!-- Past Medical Records -->
-<h3>Past Medical Records</h3>
-<div class="section-wrapper row">
-  <div class="loader-card-small" *ngIf="medicalRecordStatus.isLoading">
-    <app-skeleton-loader></app-skeleton-loader>
-  </div>
-  <div *ngIf="!medicalRecordStatus.isLoading">
-    <app-medical-record
-      *ngFor="let medicalRecord of medicalRecordStatus.data"
-      [category]="categoriesMasterData.get(medicalRecord.categoryId)?.type"
-      [recordConfig]="medicalRecord"
-    ></app-medical-record>
-  </div>
-</div>
+<app-past-medical-record [patientId]="patientId"></app-past-medical-record>
 
-<!-- Payment Records -->
-<h3>Payment History</h3>
-<div class="section-wrapper row">
-  <div class="loader-card-small" *ngIf="paymentRecordStatus.isLoading">
-    <app-skeleton-loader></app-skeleton-loader>
-  </div>
-  <div *ngIf="!paymentRecordStatus.isLoading">
-    <app-payment-record
-      *ngFor="let paymentRecord of paymentRecordStatus.data"
-      [category]="categoriesMasterData.get(paymentRecord.categoryId)?.type"
-      [paymentConfig]="paymentRecord"
-    ></app-payment-record>
-  </div>
-</div>
+<!-- Payment History -->
+<app-payment-history [patientId]="patientId"></app-payment-history>
