Update edit patient component

--- a/src/app/patient/edit-patient/edit-patient.component.html
+++ b/src/app/patient/edit-patient/edit-patient.component.html
@@ -1,1 +1,5 @@
-<p>edit-patient works!</p>
+<app-page-header pageHeading="Edit Patient Details"></app-page-header>
+<app-patient-form
+  [patientId]="patientId"
+  [isEditpage]="true"
+></app-patient-form>
