Remove patient form contents

--- a/src/app/patient/add-patient/add-patient.component.html
+++ b/src/app/patient/add-patient/add-patient.component.html
@@ -1,383 +1,2 @@
 <app-page-header pageHeading="Add Patient"></app-page-header>
-<form autocomplete="off" [formGroup]="addPatientForm">
-  <!-- Personal Details Group -->
-
-  <h3>Personal Info</h3>
-  <div formGroupName="personalDetails" class="row section-wrapper">
-    <div class="col-md-6 personal-details-wrapper">
-      <div class="row">
-        <div class="form-group col-md-8 col-lg-7">
-          <label for="patientName"
-            >Name<span class="text-danger">*</span></label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="patientName"
-            formControlName="name"
-          />
-        </div>
-        <div class="form-group col-md-4 col-lg-3">
-          <label for="age">Age<span class="text-danger">*</span></label>
-          <input
-            type="number"
-            class="form-control"
-            id="age"
-            formControlName="age"
-          />
-        </div>
-      </div>
-      <fieldset class="form-group row">
-        <legend class="col-form-label col-md-4 col-lg-3 col-xl-2">
-          Gender<span class="text-danger">*</span>:
-        </legend>
-        <div class="col-md-4">
-          <div class="form-check" *ngFor="let config of genderConfig.data">
-            <input
-              class="form-check-input"
-              type="radio"
-              [id]="config.value"
-              [value]="config.value"
-              formControlName="gender"
-            />
-            <label class="form-check-label" [for]="config.value">
-              {{ config.label }}
-            </label>
-          </div>
-        </div>
-      </fieldset>
-      <div formGroupName="phoneNumber" class="row">
-        <div class="form-group col-md-8 col-xl-5">
-          <label for="phNumber"
-            >Primary Number<span class="text-danger">*</span></label
-          >
-          <input
-            type="number"
-            class="form-control"
-            id="phNumber"
-            formControlName="primary"
-          />
-        </div>
-        <div class="form-group col-md-8 col-xl-5">
-          <label for="altNumber">Alternate Number</label>
-          <input
-            type="number"
-            class="form-control"
-            id="altNumber"
-            formControlName="secondary"
-          />
-        </div>
-      </div>
-    </div>
-
-    <!-- Address Details -->
-    <div formGroupName="address" class="address-details-wrapper col-md-6">
-      <h5>Address Details</h5>
-      <div class="form-group col-xl-10">
-        <label for="area">Area</label>
-        <input
-          type="text"
-          class="form-control"
-          id="area"
-          formControlName="area"
-        />
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6 col-xl-5">
-          <label for="city">City</label>
-          <input
-            type="text"
-            class="form-control"
-            id="city"
-            formControlName="city"
-          />
-        </div>
-        <div class="form-group col-md-6 col-xl-5">
-          <label for="state">State</label>
-          <input
-            type="text"
-            class="form-control"
-            id="state"
-            formControlName="state"
-          />
-        </div>
-        <div class="form-group col-md-6 col-xl-5">
-          <label for="pincode">Pin Code</label>
-          <input
-            type="text"
-            class="form-control"
-            id="pincode"
-            formControlName="pincode"
-          />
-        </div>
-      </div>
-    </div>
-    <div *ngIf="isInvalidPersonalInfoForm" class="text-danger">
-      <span><br />Please fill the required fields.</span>
-    </div>
-  </div>
-
-  <!-- Medical Details -->
-
-  <h3>Medical Details</h3>
-  <div formGroupName="medicalDetails" class="row section-wrapper">
-    <!-- Visting Date -->
-    <div class="form-group row">
-      <label for="dateOfVisit" class="col-md-3 col-xl-2"
-        >Visiting Date<span class="text-danger">*</span>:
-      </label>
-      <div class="col-md-4 col-xl-3">
-        <input
-          type="date"
-          class="form-control"
-          id="dateOfVisit"
-          formControlName="dateOfVisit"
-        />
-      </div>
-    </div>
-    <hr />
-    <!-- Physical Examination Details -->
-    <div formGroupName="physicalExamination" class="col-md-8 col-xl-6">
-      <h5>Physical Examination</h5>
-      <div class="row">
-        <div class="form-group col-md-6">
-          <div class="row">
-            <label for="bloodPressure" class="col-md-8">Blood Pressure</label>
-            <div class="col-md-4">
-              <input
-                type="text"
-                class="form-control"
-                id="bloodPressure"
-                formControlName="bloodPressure"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="form-group col-md-6">
-          <div class="row">
-            <label for="temperature" class="col-md-8">Temperature</label>
-            <div class="col-md-4">
-              <input
-                type="text"
-                class="form-control"
-                id="temperature"
-                formControlName="temperature"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="form-group col-md-6">
-          <div class="row">
-            <label for="pulse" class="col-md-8">Pulse</label>
-            <div class="col-md-4">
-              <input
-                type="text"
-                class="form-control"
-                id="pulse"
-                formControlName="pulse"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="form-group col-md-6">
-          <div class="row">
-            <label for="weight" class="col-md-8">Weight</label>
-            <div class="col-md-4">
-              <input
-                type="text"
-                class="form-control"
-                id="weight"
-                formControlName="weight"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="form-group col-xl-6">
-      <label for="symptoms">Symptoms</label>
-      <textarea
-        class="form-control"
-        id="symptoms"
-        rows="6"
-        formControlName="symptoms"
-      ></textarea>
-    </div>
-    <div class="form-group col-xl-6">
-      <label for="diagnosis">Diagnosis</label>
-      <textarea
-        class="form-control"
-        id="diagnosis"
-        rows="6"
-        formControlName="diagnosis"
-      ></textarea>
-    </div>
-    <div class="form-group col-xl-6">
-      <label for="investigation">Investigation</label>
-      <textarea
-        class="form-control"
-        id="investigation"
-        rows="6"
-        formControlName="investigation"
-      ></textarea>
-    </div>
-    <div class="form-group col-xl-6">
-      <label for="treatment">Treatment</label>
-      <textarea
-        class="form-control"
-        id="treatment"
-        rows="6"
-        formControlName="treatment"
-      ></textarea>
-    </div>
-    <div class="form-group col-xl-6">
-      <label for="notes">Notes</label>
-      <textarea
-        class="form-control"
-        id="notes"
-        rows="6"
-        formControlName="notes"
-      ></textarea>
-    </div>
-
-    <!-- Select Category -->
-    <div class="form-group col-md-8 col-xl-6">
-      <label for="diseaseCategory"
-        >Select Category<span class="text-danger">*</span></label
-      >
-      <select
-        class="form-select"
-        id="diseaseCategory"
-        formControlName="categoryId"
-        required
-      >
-        <option [value]="invalidCategoryId" selected disabled hidden>
-          Select a category...
-        </option>
-        <option
-          *ngFor="let category of categoryOptions"
-          [value]="category.categoryId"
-          [disabled]="isCategorySelectDisabled"
-        >
-          {{ category.type }}
-        </option>
-      </select>
-      <br />
-
-      <!-- Add Category Form -->
-      <div formGroupName="categoryDetails" *ngIf="showCategoryForm">
-        <div class="form-group">
-          <label for="categoryTitle">Type</label>
-          <input
-            type="text"
-            class="form-control"
-            id="categoryTitle"
-            formControlName="categoryTitle"
-          />
-        </div>
-        <div class="form-group">
-          <label for="categoryDescription">Description</label>
-          <textarea
-            class="form-control"
-            id="categoryDescription"
-            rows="3"
-            formControlName="categoryDescription"
-          ></textarea>
-        </div>
-        <div class="center-btn">
-          <app-button
-            [btnId]="buttonIds.saveCategory"
-            [isLoading]="categoryApiStatus.isLoading"
-            (btnClicked)="onSaveCategoryCTAClicked()"
-          >
-          </app-button>
-
-          <span *ngIf="isInvalidCategoryForm" class="text-danger"
-            ><br />All fields are required. Type should be unique.</span
-          >
-          <span *ngIf="categoryApiStatus.hasError" class="text-danger"
-            ><br />Error while saving details...Please try again.</span
-          >
-        </div>
-      </div>
-
-      <div class="center-btn">
-        <app-button
-          *ngIf="!showCategoryForm"
-          [btnId]="buttonIds.addCategory"
-          (btnClicked)="onAddCategoryCTAClicked()"
-        >
-        </app-button>
-        <span *ngIf="categoryApiStatus.hasLoaded" class="text-success"
-          ><br /><i class="bi bi-check2"></i>Category Added Succesfully.</span
-        >
-      </div>
-    </div>
-    <hr />
-    <!-- Follow up date -->
-    <div class="form-group row">
-      <label for="followUpDate" class="col-md-3 col-xl-2">Follow Up Date</label>
-      <div class="col-md-4 col-xl-3">
-        <input
-          type="date"
-          class="form-control"
-          id="followUpDate"
-          formControlName="followUpDate"
-        />
-      </div>
-    </div>
-    <div *ngIf="isInvalidMedicalDetailsForm" class="text-danger">
-      <span><br />Please fill the required fields.</span>
-    </div>
-  </div>
-
-  <!-- New Payment Details Section -->
-
-  <h3>Payment Details</h3>
-  <div
-    formGroupName="newPaymentDetails"
-    class="row section-wrapper payment-wrapper"
-  >
-    <div class="form-group col-6">
-      <label for="fees">Fees(in ₹)</label>
-      <input
-        type="number"
-        class="form-control"
-        id="fees"
-        formControlName="fees"
-      />
-    </div>
-    <div class="form-group col-6">
-      <label for="paidAmount">Paid Amount(in ₹)</label>
-      <input
-        type="number"
-        class="form-control"
-        id="paidAmount"
-        formControlName="paidAmount"
-      />
-    </div>
-    <div class="text-danger">
-      <span>Due Amount:</span>
-      <span class="due-amount">₹{{ dueAmount }}</span>
-    </div>
-    <div *ngIf="dueAmount < 0" class="text-danger">
-      <span>Due Amount cannot be negative.</span>
-    </div>
-  </div>
-
-  <div class="center-btn">
-    <app-button
-      [btnId]="buttonIds.submitPatientForm"
-      [isLoading]="pateintDetailApiStatus.isLoading"
-      (btnClicked)="onSubmitPatientDetails()"
-    ></app-button>
-    <span *ngIf="pateintDetailApiStatus.hasError" class="text-danger"
-      ><br />There was an error saving details. Please try again.</span
-    >
-    <span class="text-danger" *ngIf="isInvalidCompleteForm"
-      ><br />
-      Please fill the required fields...</span
-    >
-  </div>
-</form>
+<app-patient-form></app-patient-form>
