--- a/src/app/patient/edit-patient/edit-patient.component.html
+++ b/src/app/patient/edit-patient/edit-patient.component.html
@@ -1,5 +1,5 @@
 <app-page-header pageHeading="Edit Patient Details"></app-page-header>
 <app-patient-form
   [patientId]="patientId"
-  [isEditpage]="true"
+  [isEditPage]="true"
 ></app-patient-form>
