--- a/src/app/Core/Components/buttons/button.component.scss
+++ b/src/app/Core/Components/buttons/button.component.scss
@@ -1,4 +1,4 @@
-@import "../../scss/theme";
+@import "./../../scss/theme";
 
 .btn {
   padding: 6px 20px !important;
@@ -32,4 +32,5 @@
 .btn-loader {
   display: flex;
   margin: 2px;
+  align-items: center;
 }
